# $Id$

  MAJOR CHANGES in 2.0.51:
    1. /var/cache/edb/virtuals is no longer used at all. It's calculated now.
    2. /var/cache/edb/world is now /var/lib/portage/world.
    3. /etc/portage/profile/virtuals is _USER_ configs only.
    4. /etc/portage/sets/world is a symlink to /var/lib/portage/world
       It is for convenience. Do not mistake this for the actual file.

  25 Aug 2004; <genone@gentoo.org> pym/portage.py, +pym/portage_checksum.py, 
  pym/portage_gpg.py, -pym/portage_md5.py:
  renamed portage_md5 to portage_checksum which includes support for sha1.

  24 Aug 2004; Brian Harring <ferringb@gentoo.ogr> bin/ebuild.sh: Tweak to
  dyn_test to check if $S exists prior to cd'ing to it.

  24 Aug 2004; Brian Harring <ferringb@gentoo.org> pym/portage.py: Fixed a 
  traceback issues in dblink.treewalk when collision-protect is active.  
  Also added specific check/complaint for PORT_LOGDIR='' to the config class,
  since it should either not be set, or something non-null- a null 
  PORT_LOGDIR triggers a traceback in doebuild do to an attempted chmod.

  23 Aug 2004; Brian Harring <ferringb@gentoo.org> pym/portage.py: Added a 
  macos ranlib hack; dblink.mergeme by default resets each files mtime, which 
  makes static archives merged to the fs worthless (linker notes the files 
  mtime differs from an internal mtime, and bails).  This closes out bug 
  (#58848), and will be obsoleted when refcounts are used instead of mtime + 
  md5.

  21 Aug 2004; Brian Harring <ferringb@gentoo.org> bin/ebuild.sh: Expanded
  CONF_LIBDIR support, so it honors --prefix set values. (#61060)

  19 Aug 2004; Marius Mauch <genone@gentoo.org> bin/repoman: Added
  FEATURES and USE to the readonly variable check.

  17 Aug 2004; Brian Harring <ferringb@gentoo.org> pym/portage_data.pym:
  Adding missing imports.

  17 Aug 2004; Brian Harring <ferringb@gentoo.org> bin/repoman: Minor 
  tweak to make repoman detect the repolevel correctly in overlays.
  (#60298).
